# tinygrad

./: .gitignore  AGENTS.md  BUILD.bazel  conftest.py  harness.yaml  pyproject.toml  pytest.ini  run_all_tests.py  sz.py  test_ipc_teardown.py
.github/workflows/: benchmark.yml  test.yml
examples/: anthropic_challenge.py  audio_helpers.py  beautiful_cartpole.py  beautiful_cifar.py  beautiful_mnist.py  beautiful_mnist_multigpu.py  benchmark_onnx.py  compile_efficientnet.py  compile_tensorflow.py  gpt2.py  gradaccum_mnist.py  hlb_cifar10.py  llama.py  llama3.py  mamba.py  minrf.py  mixtral.py  mnist_gan.py  olmoe.py  qwq.py  sdv2.py  sdxl.py  stable_diffusion.py  stunning_mnist.py  test_onnx_imagenet.py  test_pkl_imagenet.py  torch_cuda_kernel.py  train_resnet.py  transformer.py  vgg7.py  whisper.py  yolov3.py  yolov8-onnx.py  yolov8.py
examples/llm.c/: export.py  train_gpt2.py
examples/mlperf/: dataloader.py  helpers.py  initializers.py  losses.py  lr_schedulers.py  metrics.py  model_eval.py  optim.py  (+2 more)
test/: helpers.py  test_baremetal_pingpong_dma.py  test_coral_macros.py  test_coralnpu_bss_preservation.py  test_coralnpu_e2e.py  test_coralnpu_ipc.py  test_coralnpu_memory.py  test_coralnpu_ops.py  test_coralnpu_renderer.py  test_coralnpu_suites.py  test_cross_compiler.py  test_cross_compiler_matrix.py  test_hardware_blockers.py  test_int8_quantization_bounds.py  test_ops_coralnpu_parallel.py  test_ping_pong_address_overlap.py  test_pytest_xdist_teardown_integration.py  test_sequential_dependencies.py  test_tiny.py  test_tinygrad_hardware_blockers.py  test_tuner_gradients.py  test_w8a8_late_dequantization.py
tinygrad/: __init__.py  device.py  dtype.py  gradient.py  helpers.py  tensor.py
(+360 files in other folders)
