package(default_visibility = ["//visibility:public"])

load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@tf2onnx_pip_deps//:requirements.bzl", "requirement")

py_library(
    name = "tinygrad",
    srcs = glob([
        "tinygrad/**/*.py",
        "extra/**/*.py",
        "examples/**/*.py",
    ]),
    imports = ["."],
    deps = [
        requirement("numpy"),
    ],
)

py_test(
    name = "test_tiny",
    srcs = ["test/test_tiny.py"],
    deps = [
        ":tinygrad",
    ],
)

py_test(
    name = "test_coralnpu_e2e",
    srcs = ["test/test_coralnpu_e2e.py"],
    deps = [
        ":tinygrad",
    ],
    data = [
        "//../coralnpu-mpact/sim:coralnpu_v2_sim",
    ],
)

py_test(
    name = "all_tests",
    srcs = ["run_all_tests.py"],
    main = "run_all_tests.py",
    deps = [
        ":tinygrad",
        "@coralnpu_pip_deps_pytest//:pkg",
    ],
    data = glob(["test/**/*.py"]),
)
